tests/code/pass/pass_operator_not.u
entrypoint: ~()->(iErrorCode:~i64{0})
{
	i:~i64{0};
	if(!i1{i})
	{
		iErrorCode += 1;
	}

	i:=12;
	if(i>0)
	{
		++iErrorCode;
	}
	
	if(!!(i>0))
	{
		iErrorCode += 1;
	}
}
