tests/code/fail/fail_literal_int_parameter_type_mismatch.u
increment:(x:f64)->(f64{x+1.0})

entrypoint: ~()->(iErrorCode:~i64{1})
{
	iErrorCode := i64{increment(3)};
}